config/default/urlshortener_auth_proxy_patch.yaml
# This patch inject a sidecar container which is a HTTP proxy for the
# urlshortener, it performs RBAC authorization against the Kubernetes API using SubjectAccessReviews.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlshortener
  namespace: system
spec:
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "true"
        kubectl.kubernetes.io/default-container: urlshortener
      labels:
        control-plane: urlshortener
    spec:
      containers:
        - name: kube-rbac-proxy
          securityContext:
            allowPrivilegeEscalation: false
          # TODO(user): uncomment for common cases that do not require escalating privileges
          # capabilities:
          #   drop:
          #     - "ALL"
          image: gcr.io/kubebuilder/kube-rbac-proxy:v0.11.0
          args:
            - "--secure-listen-address=0.0.0.0:8443"
            - "--upstream=http://127.0.0.1:8080/"
            - "--logtostderr=true"
            - "--v=0"
          ports:
            - containerPort: 8443
              protocol: TCP
              name: https
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 5m
              memory: 64Mi
        - name: urlshortener
          args:
            - "--health-probe-bind-address=:8081"
            - "--metrics-bind-address=127.0.0.1:8080"
            - --bind-address=:8123
          ports:
            - containerPort: 8123
