config/default/urlshortener_config_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urlshortener
  namespace: system
spec:
  template:
    metadata:
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
        - name: urlshortener
          args:
            - "--config=urlshortener_config.yaml"
          volumeMounts:
            - name: urlshortener-config
              mountPath: /urlshortener_config.yaml
              subPath: urlshortener_config.yaml
      volumes:
        - name: urlshortener-config
          configMap:
            name: urlshortener-config
