config/default/ingress_av0de.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - secretName: short-av0de-tls
      hosts:
        - short.cedi.dev
  rules:
    - host: short.cedi.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: urlshortener
                port:
                  number: 8123
