config/default/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urlshortener
spec:
  selector:
    control-plane: urlshortener
  ports:
    - port: 8123

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - secretName: short-cedi-dev-tls
      hosts:
        #- short.cedi.dev
        - short.av0.de
  rules:
    - host: short.av0.de
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: urlshortener
                port:
                  number: 8123
    #- host: short.cedi.dev
    #  http:
    #    paths:
    #      - path: /
    #        pathType: ImplementationSpecific
    #        backend:
    #          service:
    #            name: urlshortener
    #            port:
    #              number: 8123
